--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- #region  H E A D E R -->
-<!-- copyright file="mcodeTemplate.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
+<!-- copyright file="index.html" company="MicroCODE Incorporated" Copyright © 2022 MicroCODE Incorporated Troy, MI author="Timothy J. McGuire" -->
 <!-- #region  P R E A M B L E -->
 <!-- #region  D O C U M E N T A T I O N -->
 <!--
@@ -28,20 +28,8 @@
  *      REFERENCES:
  *      -----------
  *
- *      1. MIT xPRO CSS Style Guide
- *         https://student.emeritus.org/courses/3291/files/2554233/download?wrap=1
- *
- *      2. Google HTML/CSS Style Guide
- *         https://google.github.io/styleguide/htmlcssguide.html
- *
- *      3. MicroCODE JavaScript Style Guide
- *         Local File: MCX-S02 (Internal JS Style Guide).docx
- *         https://github.com/MicroCODEIncorporated/JavaScriptSG
- *
- *      4. MicroCODE HTML-CSS Style Guide
- *         Local File: MCX-S03 (Internal HHTML-CSS Style Guide).docx
- *         https://github.com/MicroCODEIncorporated/HTML-CSS-SG
- *
+ *      1. MIT xPRO WEEK 15: Starter Code
+
  *
  *
  *      DEMONSTRATION VIDEOS:
